	  callbacks for the same query from the same server.
	- testbound removes config file from /tmp on failed exit.
	- fixup for referral cleanup of the additional section.
	- tests for cname, referral validation.
	- neater testbound tpkg output.
	- DNAMEs no longer match their apex when synthesized from the cache.
	- find correct signer name for DNAME responses.

3 September 2007: Wouter
	- Fixed error in iterator that would cause assertion failure in 
	  validator. CNAME to a NXDOMAIN response was collated into a response
	  with both a CNAME and the NXDOMAIN rcode. Added a test that the
	  rcode is changed to NOERROR (because of the CNAME).
	- timeout on tcp does not lead to spurious leakage detect.
	- account memory for name of lame zones, so that memory leakages does
	  not show lame cache growth as a leakage growth.
	- config setting for lameness cache expressed in bytes, instead of
	  number of entries.
	- tool too summarize allocations per code line.

31 August 2007: Wouter
	- can read bind trusted-keys { ... }; files, in a compatibility mode. 
	- iterator should not detach target queries that it still could need.
	  the protection against multiple outstanding queries is moved to a
	  current_query num check.
	- validator nodata, positive, referral tests.
	- dname print can print '*' wildcard.

30 August 2007: Wouter
	- fixup override date config option.
	- config options to control memory usage.
	- caught bad free of un-alloced data in worker_send error case.
	- memory accounting for key cache (trust anchors and temporary cache).
	- memory accounting fixup for outside network tcp pending waits.
	- memory accounting fixup for outside network tcp callbacks.
	- memory accounting for iterator fixed storage.
	- key cache size and slabs config options.
	- lib crypto cleanups at exit. 

29 August 2007: Wouter
	- test tool to sign rrsets for testing validator with.
	- added RSA and DSA test keys, public and private pairs, 512 bits.